NetBSD Problem Report #50884

From www@NetBSD.org  Wed Mar  2 18:02:32 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8A1077A21B
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  2 Mar 2016 18:02:32 +0000 (UTC)
Message-Id: <20160302180231.795747ACD6@mollari.NetBSD.org>
Date: Wed,  2 Mar 2016 18:02:31 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/isdn/isdnd/log.c:165]: (style) Redundant condition:
X-Send-Pr-Version: www-1.0

>Number:         50884
>Category:       bin
>Synopsis:       src/usr.sbin/isdn/isdnd/log.c:165]: (style) Redundant condition:
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 02 18:05:00 +0000 2016
>Closed-Date:    Wed Mar 02 19:04:35 +0000 2016
>Last-Modified:  Wed Mar 02 19:05:01 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160302
>Organization:
>Environment:
>Description:
[src/usr.sbin/isdn/isdnd/log.c:165]: (style) Redundant condition: debug_noscreen. '!debug_noscreen || (debug_noscreen && what!=4)' is equivalent to '!debug_noscreen || what!=4'

Source code is

   if ((do_fullscreen && curses_ready) &&
       ((!debug_noscreen) || (debug_noscreen && (what != LL_DBG))))

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Wed, 02 Mar 2016 19:04:35 +0000
Responsible-Changed-Why:
take


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 02 Mar 2016 19:04:35 +0000
State-Changed-Why:
Applied, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50884 CVS commit: src/usr.sbin/isdn/isdnd
Date: Wed, 2 Mar 2016 19:03:31 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Mar  2 19:03:31 UTC 2016

 Modified Files:
 	src/usr.sbin/isdn/isdnd: log.c

 Log Message:
 David Binderman in PR bin/50884: simplify boolean expression


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/usr.sbin/isdn/isdnd/log.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.