David Binderman in PR bin/50884: simplify boolean expression